--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@babel/core": "^7.11.1",
     "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.11.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.7.0",
     "nodemon": "^2.0.4",
     "rimraf": "^3.0.2"
   },
