--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "task1": "nodemon --exec babel-node task1",
     "task2": "nodemon --exec babel-node task2",
+    "task2-1": "nodemon --exec babel-node task2-1",
     "transpile": "babel *.js --out-dir dist",
     "clean": "rimraf dist",
     "build": "npm run clean && npm run transpile",
@@ -32,7 +33,8 @@
     "rimraf": "^3.0.2"
   },
   "dependencies": {
-    "csvtojson": "^2.0.10"
+    "csvtojson": "^2.0.10",
+    "express": "^4.17.1"
   },
   "babel": {
     "presets": [
