--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   "dependencies": {
     "csvtojson": "^2.0.10",
     "express": "^4.17.1",
-    "joi": "^17.2.1"
+    "joi": "^17.2.1",
+    "uuid": "^8.3.0"
   },
   "babel": {
     "presets": [
