--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "csvtojson": "^2.0.10",
     "express": "^4.17.1",
     "joi": "^17.2.1",
+    "pg": "^8.3.3",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.3.5",
     "uuid": "^8.3.0"
   },
   "babel": {
