--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
   "dependencies": {
     "csvtojson": "^2.0.10",
     "express": "^4.17.1",
+    "http-status-codes": "^2.1.4",
     "joi": "^17.2.1",
     "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.0",
+    "winston": "^3.3.3"
   },
   "babel": {
     "presets": [
