--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "transpile": "babel *.js --out-dir dist",
     "clean": "rimraf dist",
     "build": "npm run clean && npm run transpile",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -27,11 +27,14 @@
     "@babel/cli": "^7.10.5",
     "@babel/core": "^7.11.1",
     "@babel/node": "^7.10.5",
+    "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.11.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.7.0",
+    "jest": "^26.6.1",
     "nodemon": "^2.0.4",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "supertest": "^6.0.1"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
@@ -51,6 +54,9 @@
   "babel": {
     "presets": [
       "@babel/preset-env"
+    ],
+    "plugins": [
+      "@babel/plugin-transform-runtime"
     ]
   }
 }
